@@ -277,6 +277,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA i900D  (EXPERIMENTAL)
        Canon PIXMA i950   (EXPERIMENTAL)
        Canon PIXMA i960   (EXPERIMENTAL)
+       Canon PIXMA i6100  (EXPERIMENTAL)
+       Canon PIXMA i6500  (EXPERIMENTAL)
        Canon PIXMA iP3600 (EXPERIMENTAL)
        Canon PIXMA iP3500 (EXPERIMENTAL)
        Canon PIXMA iP3300 (EXPERIMENTAL)
